style: fix some laptop-size layout issues

--- a/src/styles/_base.css
+++ b/src/styles/_base.css
@@ -156,7 +156,7 @@
   html,
   body,
   #root {
-    min-height: 100vh;
+    height: 95vh;
     /* width: 98%; */
     margin: 0;
     padding: 0;
